Update JMeter Result Analyzer Maven Plugin

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,24 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+	            <groupId>com.lazerycode.jmeter</groupId>
+	            <artifactId>jmeter-analysis-maven-plugin</artifactId>
+	            <executions>
+	                <execution>
+	                    <id>thread</id>
+	                    <phase>install</phase>
+	                    <goals>
+	                        <goal>analyze</goal>
+	                    </goals>
+	                    <configuration>
+	                        <source>${project.build.directory}/**/*.jtl</source>
+	                        <targetDirectory>${project.build.directory}/jmeter/test_report</targetDirectory>
+	                        <processAllFilesFound>true</processAllFilesFound>
+	                    </configuration>
+	                </execution>
+	            </executions>
+	        </plugin>
 		</plugins>
 	</build>
 	<dependencies>
